<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etAddGroupTitle"
        android:hint="@string/hint_add_group_title"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.05" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:ems="10"
        android:gravity="top|left"
        android:lines="10"
        android:hint="@string/hint_add_group_Desc"
        android:id="@+id/etAddGroupDesc"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0.47" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_add_group_btn"
        android:id="@+id/btnAddGroup"
        android:textSize="25sp"
        android:layout_weight="0.08" />
</LinearLayout>