<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="media.fleap.com.testimony.activities.SignUpActivity"
    tools:showIn="@layout/activity_sign_up">

<LinearLayout
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <ImageButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ivBtnProfileRegister"
        android:src="@drawable/kuser"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hint_name"
        android:ems="10"
        android:id="@+id/etNameProfile"
        android:layout_below="@+id/ivBtnProfileRegister"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/ivBtnProfileRegister"
        android:layout_alignEnd="@+id/ivBtnProfileRegister" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:hint="@string/hint_email"
        android:id="@+id/etEmailProfile"
        android:layout_below="@+id/etNameProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/etNameProfile"
        android:layout_alignEnd="@+id/etNameProfile" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etLocationProfile"
        android:hint="@string/hint_location"
        android:layout_below="@+id/etEmailProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/etEmailProfile"
        android:layout_alignEnd="@+id/etEmailProfile" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etChurchProfile"
        android:hint="@string/hint_church"
        android:layout_below="@+id/etLocationProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/etLocationProfile"
        android:layout_alignEnd="@+id/etLocationProfile" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/hint_password"
        android:ems="10"
        android:id="@+id/etPasswordProfile"
        android:layout_below="@+id/etChurchProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/etChurchProfile"
        android:layout_alignEnd="@+id/etChurchProfile" />
    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <media.fleap.com.testimony.utils.MultiSpinner
            android:layout_width="246dp"
            android:layout_height="49dp"
            android:id="@+id/multi_spinner_signUp" />
        <ImageView
            android:id="@+id/ivUserProfileAddGroupSignUp"
            android:layout_width="wrap_content"
            android:src="@drawable/add"
            android:layout_height="match_parent" />
    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/action_register"
        android:id="@+id/btnRegister"
        android:textSize="35sp"
        android:layout_below="@+id/etPasswordProfile"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/etPasswordProfile"
        android:layout_alignEnd="@+id/etPasswordProfile" />
</LinearLayout>
</RelativeLayout>
