<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nykyrian_q.incidentresponse1.QuestionActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="Preliminary Questions"
        android:id="@+id/textView2"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/q1Text"
        android:layout_marginTop="15dp"
        android:text="@string/q1_text"
        android:layout_below="@+id/textView2"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/q2Text"
        android:text="@string/q2_text"
        android:layout_marginTop="30dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/q1Text"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:padding="2dp"
        android:textSize="10dp"
        android:id="@+id/q2AnswerText"
        android:layout_alignParentStart="true"
        android:hint="@string/answer_here"
        android:layout_below="@+id/q2Text"
        android:layout_alignParentLeft="true"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="16dp"
        android:padding="2dp"
        android:textSize="10dp"
        android:id="@+id/q3Text"
        android:text="@string/q3_text"
        android:layout_below="@+id/q2AnswerText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:padding="2dp"
        android:textSize="10dp"
        android:id="@+id/q3AnswerText"
        android:layout_alignParentStart="true"
        android:editable="true"
        android:hint="@string/answer_here"
        android:layout_below="@+id/q3Text"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/q4Text"
        android:text="@string/q4_text"
        android:layout_below="@+id/q3AnswerText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:padding="2dp"
        android:textSize="10dp"
        android:id="@+id/q4AnswerText"
        android:layout_alignParentStart="true"
        android:editable="true"
        android:hint="@string/answer_here"
        android:layout_below="@+id/q4Text"
        android:layout_alignParentLeft="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/q5Text"
        android:text="@string/q5_text"
        android:layout_below="@+id/q4AnswerText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="30dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:padding="2dp"
        android:textSize="10dp"
        android:id="@+id/q5AnswerText"
        android:layout_alignParentStart="true"
        android:hint="@string/answer_here"
        android:layout_below="@+id/q5Text"
        android:layout_alignParentLeft="true"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="SUBMIT"
        android:id="@+id/submitButton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="16dp"
        android:padding="2dp"
        android:textSize="10dp"
        android:id="@+id/q1AnswerText"
        android:layout_below="@+id/q1Text"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/answer_here"/>
</RelativeLayout>
